gitpod URL prepared statements fix

--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -82,12 +82,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Stored 'MY_DB_NAME' (str)\n",
+      "Stored 'MY_YB_PATH' (str)\n",
+      "Stored 'MY_GITPOD_WORKSPACE_URL' (str)\n",
+      "Stored 'MY_HOST_IPv4_01' (str)\n",
+      "Stored 'MY_HOST_IPv4_02' (str)\n",
+      "Stored 'MY_HOST_IPv4_03' (str)\n",
+      "Stored 'MY_NOTEBOOK_DIR' (str)\n",
+      "Stored 'MY_TSERVER_WEBSERVER_PORT' (str)\n",
+      "Stored 'MY_NOTEBOOK_DATA_FOLDER' (str)\n",
+      "Stored 'MY_NOTEBOOK_UTILS_FOLDER' (str)\n",
+      "Stored 'MY_DATA_DDL_FILE' (str)\n",
+      "Stored 'MY_DATA_DML_FILE' (str)\n",
+      "Stored 'MY_UTIL_FUNCTIONS_FILE' (str)\n",
+      "Stored 'MY_UTIL_YBTSERVER_METRICS_FILE' (str)\n"
+     ]
+    }
+   ],
    "source": [
     "# Env variables for Notebook\n",
     "import os\n",
@@ -100,8 +121,12 @@
     " \n",
     "\n",
     "# Comment out Local\n",
-    "#MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
+    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "\n",
+    "# Gitpod specific\n",
+    "MY_YB_PATH=os.environ.get('MY_YB_PATH')\n",
+    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "\n",
     "# env_vars defines the following\n",
     "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
@@ -120,8 +145,10 @@
     "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
     "\n",
     "# Store the note book values for other notebooks to use\n",
+    "\n",
     "%store MY_DB_NAME\n",
     "%store MY_YB_PATH\n",
+    "%store MY_GITPOD_WORKSPACE_URL\n",
     "%store MY_HOST_IPv4_01\n",
     "%store MY_HOST_IPv4_02\n",
     "%store MY_HOST_IPv4_03\n",
@@ -150,13 +177,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                   List of databases\n",
+      "      Name       |  Owner   | Encoding | Collate |    Ctype    |   Access privileges   \n",
+      "-----------------+----------+----------+---------+-------------+-----------------------\n",
+      " db_ybu          | yugabyte | UTF8     | C       | en_US.UTF-8 | \n",
+      " postgres        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " system_platform | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      " template0       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " template1       | postgres | UTF8     | C       | en_US.UTF-8 | =c/postgres          +\n",
+      "                 |          |          |         |             | postgres=CTc/postgres\n",
+      " yugabyte        | postgres | UTF8     | C       | en_US.UTF-8 | \n",
+      "(6 rows)\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:  database \"db_ybu\" is being accessed by other users\n",
+      "DETAIL:  There are 6 other sessions using the database.\n",
+      "ERROR:  database \"db_ybu\" already exists\n"
+     ]
+    }
+   ],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
     "YB_PATH=${1}\n",
@@ -237,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -269,7 +325,6 @@
       "CREATE FUNCTION\n",
       "CREATE FUNCTION\n",
       "CREATE FUNCTION\n",
-      "CREATE FUNCTION\n",
       "                                                                                                                                                               List of functions\n",
       " Schema |                        Name                        |                                                                                       Result data type                                                                                        |                           Argument data types                            | Type \n",
       "--------+----------------------------------------------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+--------------------------------------------------------------------------+------\n",
@@ -288,14 +343,13 @@
       " public | fn_hex_to_int                                      | integer                                                                                                                                                                                       | hexval text                                                              | func\n",
       " public | fn_random_int_from_array                           | integer                                                                                                                                                                                       | id integer DEFAULT 1                                                     | func\n",
       " public | fn_random_name                                     | text                                                                                                                                                                                          | isfirstname integer DEFAULT 0, islastname integer DEFAULT 0              | func\n",
-      " public | fn_test                                            | TABLE(replace_host text, a_host text)                                                                                                                                                         | gitpod_url text DEFAULT 'local'::text                                    | func\n",
-      " public | fn_yb_create_stmts                                 | timestamp with time zone                                                                                                                                                                      | gitpod_url text DEFAULT 'local'::text                                    | func\n",
+      " public | fn_yb_create_stmts                                 | timestamp with time zone                                                                                                                                                                      | gitpod_url text DEFAULT '127.0.0.1'::text                                | func\n",
       " public | fn_yb_tserver_metrics_snap                         | timestamp with time zone                                                                                                                                                                      | snaps_to_keep integer DEFAULT 1, yb_tserver_webport integer DEFAULT 8200 | func\n",
-      " public | fn_yb_tserver_metrics_snap_and_show_tablet_load    | TABLE(value numeric, rate numeric, namespace_name text, table_name text, table_id text, host text, tablet_id text, is_raft_leader text, metric_name text, percent_table numeric, ops numeric) | gitpod_url text DEFAULT 'local'::text                                    | func\n",
-      " public | fn_yb_tserver_metrics_snap_and_show_tablet_load_ct | TABLE(row_name text, rocksdb_number_db_seek numeric, rocksdb_number_db_next numeric, rows_inserted numeric)                                                                                   | gitpod_url text DEFAULT 'local'::text                                    | func\n",
-      " public | fn_yb_tserver_metrics_snap_table                   | TABLE(row_name text, rocksdb_number_db_seek numeric, rocksdb_number_db_next numeric, rows_inserted numeric)                                                                                   | gitpod_url text DEFAULT 'local'::text                                    | func\n",
+      " public | fn_yb_tserver_metrics_snap_and_show_tablet_load    | TABLE(value numeric, rate numeric, namespace_name text, table_name text, table_id text, host text, tablet_id text, is_raft_leader text, metric_name text, percent_table numeric, ops numeric) | gitpod_url text DEFAULT '127.0.0.1'::text                                | func\n",
+      " public | fn_yb_tserver_metrics_snap_and_show_tablet_load_ct | TABLE(row_name text, rocksdb_number_db_seek numeric, rocksdb_number_db_next numeric, rows_inserted numeric)                                                                                   | gitpod_url text DEFAULT '127.0.0.1'::text                                | func\n",
+      " public | fn_yb_tserver_metrics_snap_table                   | TABLE(row_name text, rocksdb_number_db_seek numeric, rocksdb_number_db_next numeric, rows_inserted numeric)                                                                                   | gitpod_url text DEFAULT '127.0.0.1'::text                                | func\n",
       " public | normal_rand                                        | SETOF double precision                                                                                                                                                                        | integer, double precision, double precision                              | func\n",
-      "(22 rows)\n",
+      "(21 rows)\n",
       "\n"
      ]
     },
@@ -304,9 +358,10 @@
      "output_type": "stream",
      "text": [
       "ysqlsh:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQLPE03-Where-Clause/utils/util_ybtserver_metrics.sql:11: NOTICE:  extension \"tablefunc\" already exists, skipping\n",
-      "ysqlsh:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQLPE03-Where-Clause/utils/util_ybtserver_metrics.sql:14: NOTICE:  drop cascades to 4 other objects\n",
+      "ysqlsh:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQLPE03-Where-Clause/utils/util_ybtserver_metrics.sql:14: NOTICE:  drop cascades to 5 other objects\n",
       "DETAIL:  drop cascades to view vw_yb_tserver_metrics_last\n",
       "drop cascades to view vw_yb_tserver_metrics_report\n",
+      "drop cascades to view vw_yb_tserver_metrics_snap_and_show_tablet_load\n",
       "drop cascades to view vw_yb_tserver_metrics_snapshot_tablets\n",
       "drop cascades to view vw_yb_tserver_metrics_snapshot_tablets_metrics\n",
       "ysqlsh:/Users/seth/Documents/GitHub/YugabyteDB-University/YSQLPE03-Where-Clause/utils/util_ybtserver_metrics.sql:16: NOTICE:  view \"vw_yb_tserver_metrics_snapshot_tablets\" does not exist, skipping\n",
@@ -364,39 +419,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                               List of relations\n",
-      " Schema |                        Name                        | Type  |  Owner   \n",
-      "--------+----------------------------------------------------+-------+----------\n",
-      " public | tbl_cities                                         | table | yugabyte\n",
-      " public | tbl_countries                                      | table | yugabyte\n",
-      " public | tbl_no_pk                                          | table | yugabyte\n",
-      " public | tbl_states                                         | table | yugabyte\n",
-      " public | tbl_test                                           | table | yugabyte\n",
-      " public | tbl_yb_tserver_metrics_snapshots                   | table | yugabyte\n",
-      " public | test                                               | table | yugabyte\n",
-      " public | test3                                              | table | yugabyte\n",
-      " public | testb                                              | table | yugabyte\n",
-      " public | vw_yb_tserver_metrics_last                         | view  | yugabyte\n",
-      " public | vw_yb_tserver_metrics_report                       | view  | yugabyte\n",
-      " public | vw_yb_tserver_metrics_snap_and_show_tablet_load_ct | view  | yugabyte\n",
-      " public | vw_yb_tserver_metrics_snapshot_tablets             | view  | yugabyte\n",
-      " public | vw_yb_tserver_metrics_snapshot_tablets_metrics     | view  | yugabyte\n",
-      "(14 rows)\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE\" \"$MY_DATA_DML_FILE\"   # World Cities\n",
     "YB_PATH=${1}\n",
@@ -493,7 +522,7 @@
     "\n",
     "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
-    "engine = create_engine(connection_str)"
+    "# engine = create_engine(connection_str)"
    ]
   },
   {
@@ -512,15 +541,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext sql\n",
-    "# Example format\n",
+    "# creates connection for sql magic\n",
     "%sql {connection_str}"
    ]
   },
