--- a/02_Tables_Tablets_and_Sharding.ipynb
+++ b/02_Tables_Tablets_and_Sharding.ipynb
@@ -49,6 +49,7 @@
     "%store -r MY_HOST_IPv4_01\n",
     "%store -r MY_HOST_IPv4_02\n",
     "%store -r MY_HOST_IPv4_03\n",
+    "%store -r MY_GITPOD_WORKSPACE_URL\n",
     "\n",
     "db_host=MY_HOST_IPv4_01\n",
     "db_name=MY_DB_NAME\n",
@@ -56,19 +57,58 @@
     "\n",
     "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
-    "engine = create_engine(connection_str)"
+    "# engine = create_engine(connection_str)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "%reload_ext sql\n",
     "\n",
-    "# Example format\n",
+    "# SQL magic for python connection string\n",
     "%sql {connection_str}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> IMPORTANT!\n",
+    ">   \n",
+    "> In order to create the prepared statements for the SQL magic connection, you must run the following cell!!! Do not skip this step."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
+      "1 rows affected.\n",
+      "+----------------------------------+\n",
+      "|        fn_yb_create_stmts        |\n",
+      "+----------------------------------+\n",
+      "| 2022-07-15 09:42:12.531459-07:00 |\n",
+      "+----------------------------------+\n"
+     ]
+    }
+   ],
+   "source": [
+    "#%%\n",
+    "if (MY_GITPOD_WORKSPACE_URL is None):\n",
+    "    a = %sql select fn_yb_create_stmts()\n",
+    "else:\n",
+    "    WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
+    "\n",
+    "print (a)"
    ]
   },
   {
@@ -80,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -111,7 +151,7 @@
        "[(3,)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,49 +159,6 @@
    "source": [
     "%%sql \n",
     "select count(*) from pg_prepared_statements where 1=1 and name in ('stmt_util_metrics_snap_tablet','stmt_util_metrics_snap_table','stmt_util_metrics_snap_reset')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "sql"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "1 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "    <tr>\n",
-       "        <th>fn_yb_create_stmts</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "        <td>2022-07-15 07:41:47.335399-07:00</td>\n",
-       "    </tr>\n",
-       "</table>"
-      ],
-      "text/plain": [
-       "[(datetime.datetime(2022, 7, 15, 7, 41, 47, 335399, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=61200))),)]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%%sql\n",
-    "select fn_yb_create_stmts();"
    ]
   },
   {
@@ -174,34 +171,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " * postgresql+psycopg2://yugabyte@127.0.0.1:5433/db_ybu\n",
-      "Done.\n",
-      "Done.\n",
-      "1000 rows affected.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%sql /* create table no PK and insert rows */\n",
     "drop table if exists tbl_no_pk;\n",
@@ -215,26 +191,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "sql"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                 Table \"public.tbl_no_pk\"\n",
-      " Column |  Type   | Collation | Nullable | Default | Storage  | Stats target | Description \n",
-      "--------+---------+-----------+----------+---------+----------+--------------+-------------\n",
-      " k      | integer |           |          |         | plain    |              | \n",
-      " v      | text    |           |          |         | extended |              | \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
     "YB_PATH=${1}\n",
@@ -256,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -280,7 +243,7 @@
        "        <th>QUERY PLAN</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Seq Scan on public.tbl_no_pk (actual time=3.069..8.775 rows=1 loops=1)</td>\n",
+       "        <td>Seq Scan on public.tbl_no_pk (actual time=3.856..9.859 rows=1 loops=1)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>&nbsp;&nbsp;Output: &#x27;&#x27;::text, k, v</td>\n",
@@ -292,10 +255,10 @@
        "        <td>&nbsp;&nbsp;Rows Removed by Filter: 999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Planning Time: 0.031 ms</td>\n",
+       "        <td>Planning Time: 0.045 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>Execution Time: 8.802 ms</td>\n",
+       "        <td>Execution Time: 9.896 ms</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "        <td>Peak Memory Usage: 0 kB</td>\n",
@@ -303,16 +266,16 @@
        "</table>"
       ],
       "text/plain": [
-       "[('Seq Scan on public.tbl_no_pk (actual time=3.069..8.775 rows=1 loops=1)',),\n",
+       "[('Seq Scan on public.tbl_no_pk (actual time=3.856..9.859 rows=1 loops=1)',),\n",
        " (\"  Output: ''::text, k, v\",),\n",
        " ('  Filter: (tbl_no_pk.k = 1000)',),\n",
        " ('  Rows Removed by Filter: 999',),\n",
-       " ('Planning Time: 0.031 ms',),\n",
-       " ('Execution Time: 8.802 ms',),\n",
+       " ('Planning Time: 0.045 ms',),\n",
+       " ('Execution Time: 9.896 ms',),\n",
        " ('Peak Memory Usage: 0 kB',)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "sql"
@@ -377,15 +340,15 @@
        "        <th>rows_inserted</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>db_ybu | tbl_no_pk | http://127.0.0.1:7000/table?id=00004000000030008000000000004830 | a5965b64fc344b839317e92d79cc80a0 | L</td>\n",
+       "        <td>db_ybu | tbl_no_pk | https://7000-yugabytedbuni-ybugitpod-sgjfjfecua0.ws-us53.gitpod.io/table?id=00004000000030008000000000004830 | 5356774bd212410ca35601ba9ce2e64a | L</td>\n",
        "        <td>1</td>\n",
-       "        <td>962</td>\n",
+       "        <td>1034</td>\n",
        "        <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>db_ybu | tbl_no_pk | http://127.0.0.2:7000/table?id=00004000000030008000000000004830 | 5356774bd212410ca35601ba9ce2e64a | L</td>\n",
+       "        <td>db_ybu | tbl_no_pk | http://127.0.0.2:7000/table?id=00004000000030008000000000004830 | a5965b64fc344b839317e92d79cc80a0 | L</td>\n",
        "        <td>1</td>\n",
-       "        <td>1034</td>\n",
+       "        <td>962</td>\n",
        "        <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -397,12 +360,12 @@
        "</table>"
       ],
       "text/plain": [
-       "[('db_ybu | tbl_no_pk | http://127.0.0.1:7000/table?id=00004000000030008000000000004830 | a5965b64fc344b839317e92d79cc80a0 | L', Decimal('1'), Decimal('962'), None),\n",
-       " ('db_ybu | tbl_no_pk | http://127.0.0.2:7000/table?id=00004000000030008000000000004830 | 5356774bd212410ca35601ba9ce2e64a | L', Decimal('1'), Decimal('1034'), None),\n",
+       "[('db_ybu | tbl_no_pk | https://7000-yugabytedbuni-ybugitpod-sgjfjfecua0.ws-us53.gitpod.io/table?id=00004000000030008000000000004830 | 5356774bd212410ca35601ba9ce2e64a | L', Decimal('1'), Decimal('1034'), None),\n",
+       " ('db_ybu | tbl_no_pk | http://127.0.0.2:7000/table?id=00004000000030008000000000004830 | a5965b64fc344b839317e92d79cc80a0 | L', Decimal('1'), Decimal('962'), None),\n",
        " ('db_ybu | tbl_no_pk | http://127.0.0.3:7000/table?id=00004000000030008000000000004830 | 4ecaa3d4cdc140d9a3f51244e60e171e | L', Decimal('1'), Decimal('1001'), None)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
