--- a/02_Tables_Tablets_and_Sharding.ipynb
+++ b/02_Tables_Tablets_and_Sharding.ipynb
@@ -386,10 +386,10 @@
     "The Metrics reports shows that the query access 3 tablets for the table (`tbl_no_pk`). Each tablet has 1 seek of an offset, and then per offset, 900+ reads.\n",
     "\n",
     "Here is how to read the output of the Metrics report:\n",
-    "- row_name `db_ybu | tbl_no_pk | 00004000000030008000000000004058 | d13264e8acad46dd828912677f9483e2 | L`\n",
+    "- row_name `db_ybu | tbl_no_pk | https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039 | bc64657cf03842fab00a416cc67c8413 | L`\n",
     "  - database --> `db_ybu`\n",
     "  - table or index or materialized view  --> `tbl_no_pk`\n",
-    "  - table_id --> `00004...`\n",
+    "  - table_id --> `https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039` --> url to browser -->  table_id? --> `00004000000030008000000000004039`\n",
     "  - tablet_id --> `4aed1608c05d40edb7105b11abc629cd`\n",
     "  - isLeader --> `L`\n",
     "- rocksdb_number_db_seek\n",
@@ -397,24 +397,21 @@
     "- rocksdb_number_db_next\n",
     "  - The number of Next() RocksDB API calls, which means the number of reads from the offset\n",
     "- rows_inserted\n",
-    "  - number of rows inserted \n",
-    "\n"
+    "  - number of rows inserted "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tables and Tablets TODO Update for GitPod\n",
+    "### Tables and Tablets\n",
     "To better understand the Metrics report, you can view the tablets that processed the query in the output above in the YB-Master web ui.\n",
     "\n",
-    "Each leader has a unique identifier, a tablet_id, which is the last value in the `row_name`, something like `7ef9496faf1045a0bf5002d50eac446`.\n",
+    "From the row_name column, copy the Gitpod URL (`https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039)` into your web browser, and view the table details, including the tablet leader details.\n",
     "\n",
-    "From the row_name column, you can copy the URL (`http://127.0.0.x7000/table?id=00000x`) into a web browser, and view the table details, including the tablet leader details.\n",
-    "\n",
-    "To view the table and the tablets, follow these steps:\n",
-    "- From the metrics output above,  in the `row_name`, copy the `http://127.0.0.x:7000/table?id=00000x` value\n",
-    "- Past the URL into a browser window such a Chrome\n"
+    "> Note\n",
+    ">  \n",
+    ">  In gitpod, only the `127.0.0.1` host is available on port 7000, and will show as `https://7000-yugabytedbu-ysqlpe03whe-um13wtg7p0o.ws-us54.gitpod.io/table?id=00004000000030008000000000004039` . You are not able to browse `127.0.0.2` or `127.0.0.3`\n"
    ]
   },
   {
